Add saveCursor and restoreCursor and add progress_example.dart

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -40,5 +40,11 @@
             "type": "dart",
             "program": "example/links.dart",
         },
+        {
+            "name": "progress_indicator",
+            "request": "launch",
+            "type": "dart",
+            "program": "example/progress_indicator.dart",
+        },
     ]
 }
