--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: ansi_escape_codes
-description: Yet another package for ANSI escape codes.
+description: Yet another package for ANSI escape codes. It differs from the others only in that it focuses on using **constants** rather than functions or methods.
 version: 1.1.0
 homepage: https://github.com/vi-k/ansi_escape_codes
 
