--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,14 @@
 name: ansi_escape_codes
-description: Yet another package for ANSI escape codes. It differs from the others only in that it focuses on using constants rather than functions or methods.
-version: 1.3.1
+description: Yet another package for ANSI escape sequences. It differs from the others only in that it focuses on using constants rather than functions or methods.
+version: 1.4.0
 homepage: https://github.com/vi-k/ansi_escape_codes
 
 environment:
   sdk: ^3.0.5
 
+dependencies:
+  meta: ^1.16.0
+
 dev_dependencies:
-  lints: ^3.0.0
-  test: ^1.25.2
+  lints: ^5.1.1
+  test: ^1.25.14
