--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -80,7 +80,7 @@ linter:
     comment_references: true
     # control_flow_in_finally: true # [recommended]
     # diagnostic_describe_all_properties: true
-    discarded_futures: true # DON'T invoke asynchronous functions in non- -async blocks.
+    # discarded_futures: true # DON'T invoke asynchronous functions in non- -async blocks.
     # empty_statements: true # [recommended]
     # hash_and_equals: true # [core]
     invalid_case_patterns: true
@@ -229,7 +229,7 @@ linter:
     sized_box_shrink_expand: true
     # slash_for_doc_comments: true # [recommended]
     # sort_child_properties_last: true # [flutter]
-    sort_constructors_first: true
+    # sort_constructors_first: true
     sort_unnamed_constructors_first: true
     tighten_type_of_initializing_formals: true
     type_annotate_public_apis: true
