--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: ansi_escape_codes
-description: Yet another package for ANSI escape sequences. It differs from the others only in that it focuses on using constants rather than functions or methods.
-version: 2.0.0
+description: Yet another package for using ANSI escape codes and analyzing strings containing the escape codes.
+version: 2.0.1
 homepage: https://github.com/vi-k/ansi_escape_codes
 
 environment:
